# RustAPI

./: .env  Cargo.toml
migrations/: 001_initial_setup.sql
src/: db.rs  handlers.rs  main.rs  models.rs
src/config/: database.rs
src/controllers/: auth_controllers.rs  mod.rs  test.rs  user_controller.rs
src/models/: user.rs
src/repositories/: auth_repository.rs  user_repository.rs
src/services/: auth_service.rs  user_service.rs
src/utils/: jwt.rs
