[package]
name = "RustAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.6"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "macros", "mssql"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"